--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/LN-favicon.ico">
+    <link rel="icon" href="./img/ln-favicon.ico">
     <title>Inicio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <!---NO BORRAR - estilos css-->
     <link rel="stylesheet" href="./css/estilos.css">
+    <!---NO BORRAR - cdn de bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <a href="../index.html"><img class="logo" src="./img/Lumina-Logo.png" alt="Logotipo"></a>
+        <a href="./index.html"><img class="logo" src="./img/lumina-logo.png" alt="Logotipo"></a>
         <div>
-            <div class="cell">📞 555-555-55</div>
             <!---Inicio Menu-->
             <nav>
                 <ul class="identificacion">
@@ -26,7 +28,7 @@
         
         <nav>               
             <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./pages/nosotros.html">Quienes somos</a></li>
                 <li><a href="./pages/joyas.html">Joyas</a></li>
                 <li><a href="./pages/joyeros.html">Joyeros</a></li>
@@ -41,52 +43,72 @@
         <!---Inicio categorias
         <h1 class="titulo">Categorias</h1>-->
         <section class="categorias">
-            <img src="./img/anillo-de-brillantes.png" alt="anillo">
-            <img src="./img/aretes.png" alt="aretes">
-            <img src="./img/collar.png" alt="collar">
-            <img src="./img/pulsera.png" alt="pulsera">
-        </section>
-
-        <section class="categorias">
-            <p class="text1">Anillo</p>
-            <p class="text1">Arete</p>
-            <p class="text1">Collar</p>
-            <p class="text1">Pulsera</p>
+            <div class="tarjeta">
+                <img class="icono" src="./img/anillo-de-brillantes.png" alt="anillo">
+                <p>Anillos</p>
+            </div>
+            <div class="tarjeta">
+                <img class="icono" src="./img/aretes.png" alt="aretes">
+                <p>Aretes</p>
+            </div>
+            <div class="tarjeta">
+                <img class="icono" src="./img/collar.png" alt="collar">
+                <p>Collares</p>
+            </div>
+            <div class="tarjeta">
+                <img class="icono" src="./img/pulsera.png" alt="pulsera">
+                <p>Pulseras</p>
+            </div> 
         </section>
 
         <!---inicio productos precio-->
         <h2 class="subtitulo">Complementa tu outfit con los productos más tops</h2>
         <section class="productos">
-            <img src="./img/anillo-etnico.jpg" alt="Anillo etnico">
-            <img src="./img/argolla-ovalada.jpg" alt="Argolla ovalada">
-            <img src="./img/colgante-flor-ovalada.jpg" alt="colgante flor">
-            <img src="./img/pulsera-perrito.jpg" alt="pulsera perrito">
-            <img src="./img/conjunto-lapislazuli.jpg" alt="Conjunto lapizlazuli">
+            <div class="tarjeta2">
+                <img class="joya" src="./img/anillo-etnico.jpg" alt="Anillo etnico">
+                <p>Anillo étnico de plata 925</p>
+                <p class="precio">$12.990</p>
+            </div>
+            <div class="tarjeta2">
+                <img class="joya" src="./img/argolla-ovalada.jpg" alt="Argolla ovalada">
+                <p>Argolla ovalada de plata 925</p>
+                <p class="precio">$8.990</p>
+            </div>
+            <div class="tarjeta2">
+                <img class="joya" src="./img/colgante-flor-ovalada.jpg" alt="colgante flor">
+                <p>Colgante diseño flor ovalada</p>
+                <p class="precio">$14.990</p>
+            </div>
+            <div class="tarjeta2">
+                <img class="joya" src="./img/pulsera-perrito.jpg" alt="pulsera perrito">
+                <p>Pulsera diseño de perrito</p>
+                <p class="precio">$9.990</p>
+            </div>
+            <div class="tarjeta2">
+                <img class="joya" src="./img/conjunto-lapislazuli.jpg" alt="Conjunto lapizlazuli">
+                <p>Conjunto de plata 925  lapizlazuli</p>
+                <p class="precio">$19.990</p> 
+            </div>
         </section>
         
-        <section class="productos">
-            <h3 class="text3">Anillo étnico</h3>
-            <h3 class="text3">Argolla ovalada</h3>
-            <h3 class="text3">Colgante flor</h3>
-            <h3 class="text3">Pulsera perrito</h3>
-            <h3 class="text3">Conjunto lapizlazuli</h3>    
-        </section>
-
-        <div class="boton">
-            <a href="./pages/joyas.html"><input type="submit" value="Ver más joyas" class="boton"></a>
+        <div class="botonver">
+            <button type="button" class="vertodo">
+                <a class="vertodo-texto" href="./pages/joyas.html">ver todo joyas</a>
+            </button>
         </div>
+
     </main>
     <!---Fin contenido-->
 
     <footer>
-        <a href="../index.html"><img src="../img/Lumina-Logo.png" alt="Logotipo Lumina"></a>
+        <a href="./index.html"><img src="./img/lumina-logo.png" alt="Logotipo Lumina"></a>
         <ul class="pie">
-            <li><a class="negrita" href="../pages/nosotros.html">Quienes somos</a></li>
-            <li><a class="negrita" href="../pages/blog.html">Blog</a><li>
+            <li><a class="negrita" href="./pages/nosotros.html">Quienes somos</a></li>
+            <li><a class="negrita" href="./pages/blog.html">Blog</a><li>
             <br>
             <li class="negrita">Mi cuenta:</li>
-            <li><a href="../pages/cuenta.html">Inicia sesión</a></li>
-            <li><a href="../pages/cuenta.html">Registrate</a></li>
+            <li><a href="./pages/cuenta.html">Inicia sesión</a></li>
+            <li><a href="./pages/cuenta.html">Registrate</a></li>
         </ul>
 
         <ul class="pie">
@@ -98,5 +120,9 @@
             <li>✉︎ lumina.joyas@gmail.com</li>
         </ul>
     </footer>
+
+
+    <!---NO BORRAR - script de bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
