--- a/pages/joyeros.html
+++ b/pages/joyeros.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/LN-favicon.ico">
+    <link rel="icon" href="./img/ln-favicon.ico">
     <title>Joyeros</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <header>
-        <a href="../index.html"><img class="logo" src="../img/Lumina-Logo.png" alt="Logotipo"></a>
+        <a href="./index.html"><img class="logo" src="./img/lumina-logo.png" alt="Logotipo"></a>
         <div>
-            <p class="cell">📞 555-555-55</p>
             <!---Inicio Menu-->
             <nav>
                 <ul class="identificacion">
-                    <li><a href="../pages/cuenta.html">Inicia sesión |</a></li>
-                    <li><a href="../pages/cuenta.html">Registrate</a></li>
+                    <li><a href="./pages/cuenta.html">Inicia sesión |</a></li>
+                    <li><a href="./pages/cuenta.html">Registrate</a></li>
                 </ul>
             </nav>
         </div>
         
         <nav>               
             <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/nosotros.html">Quienes somos</a></li>
-                <li><a href="../pages/joyas.html">Joyas</a></li>
-                <li><a href="../pages/joyeros.html">Joyeros</a></li>
-                <li><a href="../pages/blog.html">Blog</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./pages/nosotros.html">Quienes somos</a></li>
+                <li><a href="./pages/joyas.html">Joyas</a></li>
+                <li><a href="./pages/joyeros.html">Joyeros</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -47,14 +46,14 @@
     <!---Fin contenido-->
 
     <footer>
-        <a href="../index.html"><img src="../img/Lumina-Logo.png" alt="Logotipo Lumina"></a>
+        <a href="./index.html"><img src="./img/lumina-logo.png" alt="Logotipo Lumina"></a>
         <ul class="pie">
-            <li><a class="negrita" href="../pages/nosotros.html">Quienes somos</a></li>
-            <li><a class="negrita" href="../pages/blog.html">Blog</a><li>
+            <li><a class="negrita" href="./pages/nosotros.html">Quienes somos</a></li>
+            <li><a class="negrita" href="./pages/blog.html">Blog</a><li>
             <br>
             <li class="negrita">Mi cuenta:</li>
-            <li><a href="../pages/cuenta.html">Inicia sesión</a></li>
-            <li><a href="../pages/cuenta.html">Registrate</a></li>
+            <li><a href="./pages/cuenta.html">Inicia sesión</a></li>
+            <li><a href="./pages/cuenta.html">Registrate</a></li>
         </ul>
 
         <ul class="pie">
