--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img class="logo" src="./img/lumina-logo.png" alt="Logotipo"></a>
+        <a href="./index.html"><img class="logo" src="./img/lumina-logo.png" alt="logotipo"></a>
         <div>
             <!---Inicio Menu-->
             <nav>
@@ -101,7 +101,7 @@
     <!---Fin contenido-->
 
     <footer>
-        <a href="./index.html"><img src="./img/lumina-logo.png" alt="Logotipo Lumina"></a>
+        <a href="./index.html"><img src="./img/lumina-logo.png" alt="logotipo lumina"></a>
         <ul class="pie">
             <li><a class="negrita" href="./pages/nosotros.html">Quienes somos</a></li>
             <li><a class="negrita" href="./pages/blog.html">Blog</a><li>
